src/test/ui/span/issue-29595.stderr
error[E0277]: the trait bound `u8: Tr` is not satisfied
  --> $DIR/issue-29595.rs:17:17: in fn main
   |
LL |     let a: u8 = Tr::C; //~ ERROR the trait bound `u8: Tr` is not satisfied
   |                 ^^^^^ the trait `Tr` is not implemented for `u8`
   |
note: required by `Tr::C`
  --> $DIR/issue-29595.rs:13:5: in trait Tr
   |
LL |     const C: Self;
   |     ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
